# sql-migration-review-assistant

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.yaml  risky_migration.sql  safe_migration.sql
examples/sequence_demo/: 20260101090000_create_orders.sql  20260101091000_drop_orders_status.sql  20260101092000_add_orders_state.sql  20260101093000_alter_orders_state.sql  20260101094000_drop_sessions.sql
src/sql_migration_review_assistant/: __init__.py  cli.py  config.py  engine.py  example_data.py  loader.py  models.py  parser.py  scoring.py  sequence.py  utils.py
src/sql_migration_review_assistant/reporters/: __init__.py  html_reporter.py  json_reporter.py  terminal.py
src/sql_migration_review_assistant/rules/: __init__.py  base.py  destructive.py  performance.py  safety.py  schema_changes.py
src/sql_migration_review_assistant/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_loader.py  test_parser.py  test_reporters.py  test_rules_destructive.py  test_rules_performance.py  test_rules_safety.py  test_rules_schema_changes.py  test_scoring.py  test_sequence.py
tests/fixtures/: destructive.sql  invalid.sql  risky.sql  safe.sql
